# pandoc-tree-sitter-filter

./: .gitattributes  .gitignore  LICENSE-MIT  README.md  flake.nix  pandoc-tree-sitter-filter.cabal  theme.css  treefmt.toml
app/: Main.hs
cbits/: ts_shim.c
grammars/ocaml/: scanner.c
grammars/scss/: parser.c  scanner.c
grammars/toml/: parser.c
grammars/typescript/: scanner.c
lib/: PandocTreeSitterFilter.hs
lib/PandocTreeSitterFilter/: FFI.hs  Grammars.hs  Highlight.hs
test/: Main.hs  input.md
