cabal-version:      3.4
name:               pandoc-tree-sitter-filter
version:            0.1.0.0
synopsis:           Pandoc filter that highlights code blocks with tree-sitter
license:            Apache-2.0 OR MIT
license-files:
    LICENSE-APACHE
    LICENSE-MIT
author:             Pseudomata
maintainer:         pseudomata@proton.me
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  PandocTreeSitterFilter
    other-modules:
        PandocTreeSitterFilter.FFI
        PandocTreeSitterFilter.Grammars
        PandocTreeSitterFilter.Highlight

    -- The C shim over libtree-sitter plus every bundled grammar's parser (and
    -- external scanner, where present) -- this is what makes the filter
    -- self-contained. Each source finds its own grammars/<lang>/tree_sitter/
    -- headers via the quoted-include rule (a file's own directory is searched
    -- first), so we need no include-dirs and the per-grammar parser.h variants
    -- never collide.
    c-sources:
        cbits/ts_shim.c
        grammars/bash/parser.c
        grammars/bash/scanner.c
        grammars/c/parser.c
        grammars/clojure/parser.c
        grammars/cpp/parser.c
        grammars/cpp/scanner.c
        grammars/css/parser.c
        grammars/css/scanner.c
        grammars/diff/parser.c
        grammars/dockerfile/parser.c
        grammars/dockerfile/scanner.c
        grammars/elixir/parser.c
        grammars/elixir/scanner.c
        grammars/go/parser.c
        grammars/haskell/parser.c
        grammars/haskell/scanner.c
        grammars/html/parser.c
        grammars/html/scanner.c
        grammars/java/parser.c
        grammars/javascript/parser.c
        grammars/javascript/scanner.c
        grammars/json/parser.c
        grammars/kotlin/parser.c
        grammars/kotlin/scanner.c
        grammars/markdown/parser.c
        grammars/markdown/scanner.c
        grammars/nix/parser.c
        grammars/nix/scanner.c
        grammars/ocaml/parser.c
        grammars/ocaml/scanner.c
        grammars/python/parser.c
        grammars/python/scanner.c
        grammars/ruby/parser.c
        grammars/ruby/scanner.c
        grammars/rust/parser.c
        grammars/rust/scanner.c
        grammars/scala/parser.c
        grammars/scala/scanner.c
        grammars/scss/parser.c
        grammars/scss/scanner.c
        grammars/sql/parser.c
        grammars/sql/scanner.c
        grammars/swift/parser.c
        grammars/swift/scanner.c
        grammars/toml/parser.c
        grammars/toml/scanner.c
        grammars/typescript/parser.c
        grammars/typescript/scanner.c
        grammars/yaml/parser.c
        grammars/yaml/scanner.c

    extra-libraries:  tree-sitter
    build-depends:
        base >=4.19 && <5,
        array,
        bytestring,
        containers,
        file-embed,
        pandoc-types,
        text

    hs-source-dirs:   lib
    default-language: Haskell2010

executable pandoc-tree-sitter-filter
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.19 && <5,
        pandoc-tree-sitter-filter,
        pandoc-types

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite pandoc-tree-sitter-filter-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base >=4.19 && <5,
        pandoc-tree-sitter-filter,
        pandoc-types,
        text

    hs-source-dirs:   test
    default-language: Haskell2010
